EDGE-373 resource management fixes
